# FastAPI_MeeTTech

./: Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
src/: auth.py  helpers.py  local_database.py  main.py  schemas.py
src/tests/: test_api.py
